# Rainze

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/agents/: api-designer.md  code-writer.md  commit-helper.md  prd-analyst.md  prompt-generator.md  prompt-optimizer.md  repo-scanner.md  rust-coder.md  tech-spec-writer.md
.claude/commands/: check.md  commit.md  fix-github-issue.md  implement-module.md  review.md  scan-repo.md
.claude/hooks/: post-edit.sh
.claude/output-styles/: rainze-dev.md
.claude/skills/code-review/: SKILL.md
.claude/skills/code-writer/: SKILL.md
.claude/skills/commit-helper/: SKILL.md
.claude/skills/fix-github-issue/: SKILL.md
.claude/skills/prd-analyst/: SKILL.md
.claude/skills/quality-check/: SKILL.md
.claude/skills/repo-scanner/: SKILL.md
.claude/skills/rust-coder/: SKILL.md
.claude/skills/tech-spec-writer/: SKILL.md
.github/: CHANGELOG.md  README.md  TODO.md  copilot-instructions.md
.github/agents/: CHANGELOG.md  README.md  TODO.md  api-designer.agent.md  code-writer.agent.md  commit-helper.agent.md  prd-analyst.agent.md  prompt-generator.agent.md  prompt-optimizer.agent.md  repo-scanner.agent.md  rust-coder.agent.md  tech-spec-writer.agent.md
.github/github_copilot_cli_docs/: CHANGELOG.md  INDEX.md  README.md  TODO.md
.github/github_copilot_cli_docs/blog_changelog/: CHANGELOG.md  README.md  TODO.md  changelog_2024-03-21-github-copilot-general-availability-in-the-cli.md
.github/github_copilot_cli_docs/concepts/: CHANGELOG.md  README.md  TODO.md  en_copilot_concepts_agents_about-copilot-cli.md  en_copilot_responsible-use_copilot-cli.md
.github/github_copilot_cli_docs/configuration/: CHANGELOG.md  README.md  TODO.md  en_copilot_customizing-copilot_adding-custom-instructions-for-github-copilot.md
.github/github_copilot_cli_docs/features_pages/: CHANGELOG.md  README.md  TODO.md  features_copilot_cli.md  github_copilot-cli.md
.github/github_copilot_cli_docs/getting_started/: CHANGELOG.md  README.md  TODO.md  en_copilot.md  en_copilot_get-started_features.md  en_copilot_get-started_quickstart.md  en_copilot_get-started_what-is-github-copilot.md
.github/github_copilot_cli_docs/installation_setup/: CHANGELOG.md  README.md  TODO.md  en_copilot_how-tos_set-up_install-copilot-cli.md  en_copilot_how-tos_set-up_installing-github-copilot-in-the-cli.md
.github/github_copilot_cli_docs/reference/: CHANGELOG.md  README.md  TODO.md  en_copilot_reference_cheat-sheet.md  en_copilot_reference_copilot-allowlist-reference.md
.github/github_copilot_cli_docs/using_copilot_cli/: CHANGELOG.md  README.md  TODO.md  en_copilot_how-tos_use-copilot-agents_use-copilot-cli.md  en_copilot_how-tos_use-copilot-for-common-tasks_use-copilot-in-the-cli.md  en_copilot_using-github-copilot_using-github-copilot-in-the-command-line.md
.github/instructions/: CHANGELOG.md  README.md  TODO.md  api-designer.instructions.md  code-writer.instructions.md  commit-helper.instructions.md  prd-analyst.instructions.md  prompt-generator.instructions.md  prompt-optimizer.instructions.md  repo-scanner.instructions.md  tech-spec-writer.instructions.md
.github/prds/: CHANGELOG.md  PRD-Rainze.md  README.md  TODO.md
.github/prds/modules/: CHANGELOG.md  MOD-AI.md  MOD-Agent.md  MOD-Animation-Script.md  MOD-Animation.md  MOD-Core.md  MOD-Features-Basic.md  MOD-GUI.md  MOD-Memory.md  MOD-Plugins.md  MOD-RustCore.md  MOD-State.md  MOD-Storage.md  MOD-Tools.md  README.md  TODO.md
.github/references/: CHANGELOG.md  README.md  TODO.md
.github/references/changelog/: CHANGELOG.md  README.md  TODO.md  keep-a-changelog.md
.github/references/git/: CHANGELOG.md  README.md  TODO.md
.github/references/python/: CHANGELOG.md  README.md  TODO.md  pep8.md
.github/references/rust/: CHANGELOG.md  README.md  TODO.md  style.md
.github/roles/: CHANGELOG.md  README.md  TODO.md  product-requirements-analyst.md  technical-specification-writer.md
.github/techstacks/: CHANGELOG.md  README.md  TECH-Rainze.md  TODO.md
assets/animations/: behavior.py  manifest.json
config/: api_settings.json  app_settings.json  master_profile.json  memory_settings.json  scene_tier_mapping.json  system_prompt.txt
rainze_core/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  pyproject.toml
rainze_core/src/: lib.rs  memory_search.rs  system_monitor.rs  text_process.rs
skills/: CHANGELOG.md  README.md  TODO.md
skills/rainze-code-writer/: CHANGELOG.md  README.md  SKILL.md  TODO.md
skills/rainze-code-writer/references/: CHANGELOG.md  README.md  TODO.md  docs-index.md  workflow.md
src/rainze/: __init__.py  main.py
src/rainze/agent/: CHANGELOG.md  README.md  TODO.md  __init__.py  context_manager.py  scene_classifier.py  tier_handlers.py
src/rainze/ai/: CHANGELOG.md  README.md  TODO.md  __init__.py  emotion_inferrer.py  exceptions.py  schemas.py
src/rainze/ai/generation/: __init__.py  strategy.py  tier1_template.py  tier2_rule.py  tier3_llm.py
src/rainze/ai/llm/: __init__.py  client.py
src/rainze/animation/: CHANGELOG.md  README.md  TODO.md  __init__.py  controller.py
src/rainze/animation/frames/: __init__.py  player.py  sequence.py
src/rainze/animation/layers/: __init__.py  base_layer.py
src/rainze/animation/models/: __init__.py  animation.py
src/rainze/core/: __init__.py  app.py  config.py  event_bus.py  exceptions.py  schemas.py
src/rainze/gui/: __init__.py  chat_bubble.py  input_panel.py  main_window.py  menu_system.py  system_tray.py  transparent_widget.py
src/rainze/memory/: CHANGELOG.md  README.md  TODO.md  __init__.py  exceptions.py  manager.py
src/rainze/sandbox/: __init__.py  builtins.py  exceptions.py  executor.py
src/rainze/state/: CHANGELOG.md  README.md  TODO.md  __init__.py  manager.py
tests/: conftest.py
tests/integration/: test_dependency_chain.py  test_emotion_fallback.py  test_tier3_llm.py
tests/unit/: test_coordinator.py  test_core.py  test_emotion_inferrer.py  test_retrieval.py  test_ucm.py
(+30 files in other folders)
