# Rainze - AI 桌面宠物应用
# AI Desktop Pet Application
#
# Reference:
#     - TECH: .github/techstacks/TECH-Rainze.md
#     - PRD: .github/prds/PRD-Rainze.md

[project]
name = "rainze"
version = "0.1.0"
description = "AI-driven desktop pet application with intelligent companionship"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Rainze Team" }]
keywords = ["desktop-pet", "ai", "llm", "companion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

dependencies = [
    # GUI 框架 / GUI Framework
    "pyside6>=6.8",
    # HTTP 客户端 / HTTP Client
    "httpx>=0.28",
    # LLM SDK
    "openai>=1.58",
    "anthropic>=0.40",
    # 向量化与检索 / Vectorization & Retrieval
    "sentence-transformers>=3.3",
    "faiss-cpu>=1.9",
    # 数据库与 ORM / Database & ORM
    "sqlalchemy>=2.0",
    # 数据验证 / Data Validation
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # 日志与调试 / Logging & Debugging
    "structlog>=24.4",
    "rich>=13.9",
    # 中文分词 / Chinese Tokenization (for entity detection)
    "jieba>=0.42",
    # 异步支持 / Async Support
    "anyio>=4.7",
    # 文件监视 / File Watching
    "watchdog>=6.0",
    "snownlp>=0.12.3",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    # 测试 / Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    
    # 代码质量 / Code Quality
    "ruff>=0.8",
    "mypy>=1.13",
    
    # 预提交钩子 / Pre-commit Hooks
    "pre-commit>=4.0",
    
    # 类型存根 / Type Stubs
    "types-toml>=0.10",
]

build = [
    # 打包工具 / Build Tools
    "maturin>=1.8",
    "nuitka>=2.5",
    "pyinstaller>=6.11",
]

[project.scripts]
rainze = "rainze.main:main"

[project.urls]
Homepage = "https://github.com/rainze-team/rainze"
Repository = "https://github.com/rainze-team/rainze"
Documentation = "https://github.com/rainze-team/rainze#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rainze"]

# ============================================================================
# 开发工具配置 / Development Tools Configuration
# ============================================================================

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.isort]
known-first-party = ["rainze", "rainze_core"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "jieba.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/rainze"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
