# Rainze Rust Core
# Rust 性能模块 / Rust Performance Module
#
# 提供记忆检索、系统监控、文本处理等性能关键功能。
# Provides memory search, system monitoring, text processing, etc.
#
# Reference:
#     - TECH: ../.github/techstacks/TECH-Rainze.md §3.2
#     - MOD: ../.github/prds/modules/MOD-RustCore.md

[package]
name = "rainze_core"
version = "0.1.0"
edition = "2024"
authors = ["Rainze Team"]
description = "High-performance Rust core for Rainze AI Desktop Pet"
license = "MIT"
repository = "https://github.com/rainze-team/rainze"
readme = "README.md"
keywords = ["pyo3", "faiss", "desktop-pet", "ai"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "rainze_core"
# 仅 cdylib 用于 Python 扩展，rlib 与 abi3 不兼容
# Only cdylib for Python extension, rlib not compatible with abi3
crate-type = ["cdylib"]

[dependencies]
# PyO3 - Python 绑定 / Python Bindings
# 注意: 使用 abi3-py39 以支持 Python 3.9+ (包括 3.14)
# Note: Using abi3-py39 for Python 3.9+ support (including 3.14)
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }

# 系统信息 / System Information
sysinfo = "0.37"

# 异步运行时 / Async Runtime
tokio = { version = "1.48", features = ["full"] }

# 并行计算 / Parallel Computing
rayon = "1.11"

# 错误处理 / Error Handling
anyhow = "1.0"
thiserror = "2.0"

# 序列化 / Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志 / Logging
tracing = "0.1"

# Windows API (条件编译 / Conditional Compilation)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
] }

[dev-dependencies]
# 测试 / Testing
criterion = { version = "0.5", features = ["html_reports"] }

# TODO: 添加基准测试 / Add benchmarks
# [[bench]]
# name = "memory_search"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
